# harness-graph

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  plan.md
apps/graph-ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/graph-ui/src/: App.tsx  main.tsx  styles.css
apps/graph-ui/src/api/: client.ts  contracts.ts
apps/graph-ui/src/components/: Badges.tsx  CitationLinks.tsx  SessionDetail.tsx  SessionNavigation.tsx
apps/graph-ui/tests/: browser.e2e.spec.ts  browser.live.e2e.spec.ts  contract-server.mjs  fixtures.mjs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: e2e.rs
crates/assurance/: Cargo.toml
crates/assurance/src/: lib.rs
crates/classification/: Cargo.toml
crates/classification/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  config.rs  error.rs  lib.rs  main.rs
crates/cli/src/command/: transcript_apply.rs
crates/cli/tests/: e2e.rs  live_mistral.rs
crates/correlation/: Cargo.toml
crates/correlation/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: digest.rs  error.rs  lib.rs  observation.rs  semantics.rs  value.rs
crates/enrichment-application/: Cargo.toml
crates/enrichment-application/src/: config.rs  conversion.rs  error.rs  lib.rs  service.rs
crates/event-journal/: Cargo.toml
crates/event-journal/src/: lib.rs
crates/graph-port/: Cargo.toml
crates/graph-port/src/: enrichment.rs  experience.rs  lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: archive.rs  error.rs  lib.rs  stream.rs  transcript_stream.rs
crates/mistral-adapter/: Cargo.toml
crates/mistral-adapter/src/: lib.rs  retry_http.rs  transcript_knowledge.rs
crates/mistral-adapter/src/transcript_knowledge/: tests.rs
crates/neo4j-adapter/: Cargo.toml
crates/neo4j-adapter/src/: application.rs  enrichment.rs  experience.rs  lib.rs
crates/path-analysis/: Cargo.toml
crates/path-analysis/src/: lib.rs
crates/planning/: Cargo.toml
crates/planning/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codex.rs  error.rs  lib.rs  transcript.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/transcript-enrichment/: Cargo.toml
crates/transcript-enrichment/src/: authorization.rs  chunk.rs  error.rs  inventory.rs  knowledge.rs  lib.rs  redaction.rs
crates/transcript-enrichment/tests/: e2e.rs
fixtures/source-safe/: README.md
fixtures/source-safe/active/2026-02-16/019c63db-2995-74c3-b898-c1b92a8e1317/: README.md  checksums.sha256  metadata.json
fixtures/source-safe/active/2026-02-16/019c63db-2995-74c3-b898-c1b92a8e1317/raw/: rollout.jsonl
