[workspace]
members = [
    "crates/domain",
    "crates/protocol",
    "crates/ingestion",
    "crates/graph-port",
    "crates/neo4j-adapter",
    "crates/cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hghalebi/harness-graph"
rust-version = "1.95"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
neo4rs = "0.8"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
