[package]
name = "harness-graph-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
harness-graph-event-journal = { path = "../event-journal" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
