[package]
name = "harness-graph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "harness-graph"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dotenvy.workspace = true
harness-graph-assurance = { path = "../assurance" }
harness-graph-classification = { path = "../classification" }
harness-graph-correlation = { path = "../correlation" }
harness-graph-domain = { path = "../domain" }
harness-graph-graph-port = { path = "../graph-port" }
harness-graph-ingestion = { path = "../ingestion" }
harness-graph-neo4j-adapter = { path = "../neo4j-adapter" }
harness-graph-path-analysis = { path = "../path-analysis" }
harness-graph-risk = { path = "../risk" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
