[package]
name = "harness-graph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "harness-graph"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
harness-graph-api = { path = "../api" }
harness-graph-assurance = { path = "../assurance" }
harness-graph-classification = { path = "../classification" }
harness-graph-correlation = { path = "../correlation" }
harness-graph-domain = { path = "../domain" }
harness-graph-enrichment-application = { path = "../enrichment-application" }
harness-graph-event-journal = { path = "../event-journal" }
harness-graph-graph-port = { path = "../graph-port" }
harness-graph-ingestion = { path = "../ingestion" }
harness-graph-mistral-adapter = { path = "../mistral-adapter" }
harness-graph-neo4j-adapter = { path = "../neo4j-adapter" }
harness-graph-path-analysis = { path = "../path-analysis" }
harness-graph-planning = { path = "../planning" }
harness-graph-risk = { path = "../risk" }
harness-graph-transcript-enrichment = { path = "../transcript-enrichment" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
neo4rs.workspace = true
reqwest = { version = "0.13", features = ["json"] }
sha2.workspace = true
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
