[package]
name = "harness-graph-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
