[package]
name = "harness-graph-enrichment-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util.workspace = true
harness-graph-domain = { path = "../domain" }
harness-graph-graph-port = { path = "../graph-port" }
harness-graph-protocol = { path = "../protocol" }
harness-graph-transcript-enrichment = { path = "../transcript-enrichment" }
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
