[package]
name = "harness-graph-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harness-graph-domain = { path = "../domain" }
harness-graph-protocol = { path = "../protocol" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
