[package]
name = "harness-graph-mistral-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
harness-graph-domain = { path = "../domain" }
harness-graph-planning = { path = "../planning" }
rig.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true

[lints]
workspace = true
