[package]
name = "harness-graph-mistral-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes = "1"
futures-util.workspace = true
harness-graph-domain = { path = "../domain" }
harness-graph-enrichment-application = { path = "../enrichment-application" }
harness-graph-planning = { path = "../planning" }
harness-graph-transcript-enrichment = { path = "../transcript-enrichment" }
httpdate = "1"
rig.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
dotenvy.workspace = true
harness-graph-ingestion = { path = "../ingestion" }
harness-graph-protocol = { path = "../protocol" }

[lints]
workspace = true
