[package]
name = "harness-graph-neo4j-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
harness-graph-domain = { path = "../domain" }
harness-graph-graph-port = { path = "../graph-port" }
harness-graph-planning = { path = "../planning" }
neo4rs.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
dotenvy.workspace = true
harness-graph-assurance = { path = "../assurance" }
harness-graph-classification = { path = "../classification" }
harness-graph-correlation = { path = "../correlation" }
harness-graph-ingestion = { path = "../ingestion" }
harness-graph-path-analysis = { path = "../path-analysis" }
harness-graph-risk = { path = "../risk" }
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
