[package]
name = "harness-graph-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
harness-graph-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
thiserror.workspace = true

[lints]
workspace = true
