[package]
name = "harness-graph-transcript-enrichment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
harness-graph-domain = { path = "../domain" }
harness-graph-ingestion = { path = "../ingestion" }
harness-graph-protocol = { path = "../protocol" }
hex.workspace = true
hmac.workspace = true
regex.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
